--- a/Stylesheet/styles.css
+++ b/Stylesheet/styles.css
@@ -147,32 +147,23 @@ footer h6{
     
     .navbar ul li{
         font-size: 12px;
-        display: inline;
         line-height: 35px;
         margin: 0 10px;
     }
 
     .logo{
         width: 70px;
-        position: absolute;
         top: 22px;
         left: 20px;
     }
 
     .heading1{
-        position: absolute;
-        color: rgba(255, 255, 255);
         font-size: 40px;
         padding: 20px;
         top: 12%;
-        text-shadow: 8px 8px 10px black;
     }
     
     .para1{
-        background-color: rgba(10, 69, 158, 0.555);
-        backdrop-filter: blur(20px);
-        position: absolute;
-        font-family: Arial;
         font-size: 8px;
         top: 25%;
         margin-right: 140px;
@@ -183,20 +174,12 @@ footer h6{
         height: 30px;
         width: 50px;
         font-size: 1px;
-        border: none;
-        border-radius: 2px;
-        color: cornsilk;
-        background-color: rgba(0, 81, 255, 0.616);
-        position: absolute;
         top: 15px;
         left: 430px;
-        transition: 0.4s;
     }
 
     .part2{
         font-size: 6px;
-        text-align: center;
-        position: relative;
         padding-top: 90px;
         padding-left: 40px;
         padding-right: 40px;
@@ -209,10 +192,70 @@ footer h6{
     }
 
     footer{
-        background: linear-gradient(rgb(0, 110, 255), rgb(0, 50, 187));
         height: 30px;
         width: 100%;
-        text-align: center;
+    }
+    footer h6{
+        font-size: 6px;
+        padding-top: 12px;
+    }
+}
+
+@media screen and (max-width: 380px) {
+
+    .navbar{
+        height: 60px;
+    }
+
+    .navbar ul li{
+        font-size: 8px;
+        line-height: 35px;
+        margin: 0 8px;
+    }
+
+    .logo{
+        width: 40px;
+        top: 22px;
+        left: 15px;
+    }
+
+    .heading1{
+        font-size: 30px;
+        padding: 20px;
+        top: 12%;
+    }
+    
+    .para1{
+        font-size: 6px;
+        top: 23%;
+        margin-right: 90px;
+        padding: 10px;
+    } 
+
+    .btn{
+        height: 25px;
+        width: 50px;
+        font-size: 0.5px;
+        top: 20px;
+        left: 320px;
+    }
+
+    .part2{
+        font-size: 10px;
+        padding-top: 90px;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-bottom: 90px;
+    }
+
+    .part2 img{
+        height: 200px;
+        padding-top: 20px;
+    }
+
+    footer{
+        height: 30px;
+        width: 100%;
     }
     footer h6{
         font-size: 6px;
